Add Section Banner

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
     </div>
   </header>
 
+  <section>
+    <div class="container">
+      <div class="row banner-block">
+        <div class="plashka">
+          <h1>Тур<br>в Созополь, Болгария</h1>
+          <span>код тура</span>
+          <div class="tour-code">3094119</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+
 
   <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
   <script src="js/bootstrap.js" type="text/javascript"></script>
