Add Section Hotel-Aquamarine. Mod_01

--- a/index.html
+++ b/index.html
@@ -46,7 +46,53 @@
     </div>
   </section>
 
-  <section></section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-7 col-lg-8 col-md-12 col-sm-12 aquamarine-hotel">
+          <div class="aquamarine-hotel__about">
+            <h1>Aquamarine hotel</h1>
+            <div class="stars">
+              <img src="img/Star.png" alt="">
+              <img src="img/Star.png" alt="">
+              <img src="img/Star.png" alt="">
+            </div>
+            <h1 class="hotel-price">$256</h1>
+          </div>
+
+          <div class="aquamarine-hotel__ratings">
+            <div class="rating-respond">
+              <span>Оценка отеля</span>
+              <a href="">45 отзывов</a>
+            </div>
+
+            <div class="total-rating">8.4</div>
+
+            <div class="hotel__rating">
+              <span>номер</span>
+              <span class="rating">8.9</span>
+            </div>
+            <div class="hotel__rating">
+              <span>питание</span>
+              <span class="rating">8.1</span>
+            </div>
+            <div class="hotel__rating">
+              <span>сервис</span>
+              <span class="rating">7.9</span>
+            </div>
+            <div class="hotel__rating">
+              <span>инфраструктура</span>
+              <span class="rating">8.9</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 days-amount__block">
+          <span class="days-amount">320</span>
+          <span>солнечных <br> дней в году</span>
+        </div>
+      </div>
+    </div>
+  </section>
   <section></section>
   <section></section>
   <section></section>
