Add Section Hotel-Aquamarine. Mod_02

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <section>
+  <section class="section-banner">
     <div class="container">
       <div class="row banner-block">
         <div class="plashka">
@@ -48,7 +48,7 @@
 
   <section>
     <div class="container">
-      <div class="row">
+      <div class="row aquamarine-row">
         <div class="col-xl-7 col-lg-8 col-md-12 col-sm-12 aquamarine-hotel">
           <div class="aquamarine-hotel__about">
             <h1>Aquamarine hotel</h1>
@@ -89,6 +89,34 @@
         <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 days-amount__block">
           <span class="days-amount">320</span>
           <span>солнечных <br> дней в году</span>
+        </div>
+      </div>
+
+      <div class="rows extrim">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 extrim-block extrim-block_01">
+          <img src="img/extrim_01.jpg" alt="">
+          <div class="extrim-block__about">
+            <div class="extrim-titile">
+              <h1>Шелковый путь</h1>
+              <span>Экстремальный маршрут</span>
+            </div>
+            <div class="extrim-price">
+              <span class="extrim-price_now">$987</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 extrim-block extrim-block_02">
+          <img src="img/extrim_02.jpg" alt="">
+          <div class="extrim-block__about">
+            <div class="extrim-titile">
+              <h1>Не дай Бог не любишь</h1>
+              <span>Роупджампинг</span>
+            </div>
+            <div class="extrim-price">
+              <span class="extrim-price_now">$59</span>
+              <span class="extrim-price_was">$90</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
