--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/font-awesome.css">
-  <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -121,14 +120,105 @@
       </div>
     </div>
   </section>
-  <section></section>
-  <section></section>
-  <section></section>
+
+  <section>
+    <div class="container">
+      <div class="row interesting-physics">
+        <h1>36,6 градусов по цельсию и познавательная физика</h1>
+      </div>
+
+      <div class="row text-content">
+        <div class="col-xl-9 col-lg-9 col-md-12 text-content__main">
+          <p class="p_bold">Никто не задумывался почему температура человеческого тела 36,6 С? Почему не иная? Почему не равна дневной температуре окружающего пространства к примеру? Но почему так произошло? Первая причина лежит от нас на временной оси в прошлом на расстоянии в несколько миллиардов лет. Именно тогда появилась жизнь.</p>
+          <p>Грубо говоря первичные репликаторы огородились защитной оболочкой от остальной части океана — создав клетки. Клетки это замкнутые водные резервуары, в которых вся жизнедеятельность проходит в водной среде. И все сухопутные организмы концептуально это машины выживания репликаторов, мобильная (в случае с животными), благоприятная водная среда для репродукции, окруженная защитной оболочкой от внешнего мира.</p>
+          <h1>Ищем ответ</h1>
+          <p>Что интересно, все теплокровные функционируют в пределах той же области температур что и человек. Например температура у лошадей 37,5-38,5; у коров 37,5-39,5; кур 40,5-42,5; свиней 39,0-40,0; кошек 38,0-39,5; обезьян 38,1; голубей 41,0-44,0. Ответ лежит в области нет, не биологии. А в области физики воды.</p>
+          <blockquote cite="http://">
+            <p>Дело в том, что теплоемкость воды нелинейно зависит от температуры. Теплоемкость это количество энергии, которое необходимо потратить для того что бы нагреть 1 кг вещества на 1 градус. При увеличении температуры она как бы пикирует как штурмовик, и возносится ввысь после прохождения нижней точки в 36,8 градусов Цельсия. В организме человека вода составляет около 65-70%, её теплоемкость огромна. </p>
+          </blockquote>
+          <p>90% энергии получаемой с пищей, теплокровные потому тратят только лишь на поддержание постоянной температуры внутренней среды. На нагревание воды. Потому эта ямка, минимум, в котором нужно было тратить минимальное количество энергии на поддержание своего состояния, как аттрактор, стягивал на себя на протяжении эволюции все «модели» теплокровных. Фенотипы, с рабочей температурой иных диапазонов были слишком «прожорливыми» и отсеивались отбором.</p>
+          <h2>Хлорофилл и красота</h2>
+          <p>Могло случится так что небо было бы ядовито-желтое а не голубое. Трава так же красная. Нравился бы нам такой пейзаж? Почему красный, ярко-желтый, создают чувство неспокойствия и не подходят для идилических райских картин ландшафтов как голубой и зеленый? Дело не в них а в нас. Мы продукт эволюции, продукт среды в которой мы развивались. Что и было показано на примере температуры тела.</p>
+          <p>Начну с далека, так уж нужно, ничего не поделаешь… Зеленым цветом на картинке окрашена трава, трава это растение. Первыми вышли задолго до животных на сушу растения. Они сформировали то первичное окружение для живых организмов, создали им условия существования на суше. Стали источником пищи и крова, ведь животные гетеротрофы. Растения же в основном автотрофы. Так вышло что у растений при участии хлорофилла осуществляется процесс фотосинтеза. А по совместительству он так же зелёный пигмент, обусловливающий окраску хлоропластов растений в зелёный цвет.</p>
+          <p>Так же интересна физическая причина наших понятий красоты.</p>
+
+          <table class="table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Хлорофилл a</th>
+                <th>Хлорофилл b</th>
+                <th>Хлорофилл c1</th>
+                <th>Хлорофилл c2</th>
+                <th>Хлорофилл cd</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Формула</th>
+                <td class="echem-formula">C<sub>55</sub>H<sub>72</sub>O<sub>5</sub>N<sub>4</sub>Mg</td>
+                <td class="echem-formula">C<sub>55</sub>H<sub>70</sub>O<sub>6</sub>N<sub>4</sub>Mg</td>
+                <td>C<sub>35</sub>H<sub>30</sub>O<sub>5</sub>N<sub>4</sub>Mg</td>
+                <td>C<sub>35</sub>H<sub>28</sub>O<sub>5</sub>N<sub>4</sub>Mg</td>
+                <td>C<sub>54</sub>H<sub>70</sub>O<sub>5</sub>N<sub>4</sub>Mg</td>
+              </tr>
+              <tr>
+                <th scope="row">C2 группа</th>
+                <td>-CH<sub>3</sub></td>
+                <td>-CH<sub>3</sub></td>
+                <td>-CH<sub>3</sub></td>
+                <td>-CH<sub>3</sub></td>
+                <td>-CH<sub>3</sub></td>
+              </tr>
+              <tr>
+                <th scope="row">C3 группа</th>
+                <td>-CH=CH<sub>2</sub></td>
+                <td>-CH=CH<sub>2</sub></td>
+                <td>-CH=CH<sub>2</sub></td>
+                <td>-CH=CH<sub>2</sub></td>
+                <td>-CHO</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <ul>Как найти эти консервативные признаки? Наиболее часто рассматривают 5 источников информации о них:
+            <li>эмбриологические исследования;</li>
+            <li>тератологические данные;</li>
+            <li>сравнительно-морфологические данные;</li>
+            <li>анализ врожденных поведенческих программ (этологические данные);</li>
+            <li>изучение взаимосвязи с другими видами.</li>
+          </ul>
+        </div>
+        <div class="col-xl-3 col-lg-3 col-md-12 text-content__sidebar">
+          <span>0,71</span>
+          <h1>WHR здоровой женщины</h1>
+          <p>Один из весьма надежных оказателей здоровья, фертильности, как раз и является «waistto hip ratio».</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <span class="my-time">Я потратил на этот макет: <div class="time-for-psd">6</div> часов</span>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="row footer-block">
+        <span>Тестовое задание на вакансию верстальщика в компанию <a href="">Fleeks</a></span>
+
+        <div class="social-icons">
+          <div><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+          <div><a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a></div>
+          <div><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
   <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
   <script src="js/bootstrap.js" type="text/javascript"></script>
-  <script src="js/slick.js" type="text/javascript"></script>
   <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
